logs/microblog.log
2024-02-27 19:17:52,540 INFO: Microblog startup [in /Users/omidm/Desktop/Coding/flask_tutorial/app/__init__.py:44]
2024-02-28 10:16:47,115 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:16:51,856 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:16:58,270 ERROR: Exception on /favicon.ico [GET] [in /Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py:828]
Traceback (most recent call last):
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 870, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 844, in dispatch_request
    self.raise_routing_exception(req)
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 453, in raise_routing_exception
    raise request.routing_exception  # type: ignore[misc]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/ctx.py", line 362, in match_request
    result = self.url_adapter.match(return_rule=True)  # type: ignore
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/werkzeug/routing/map.py", line 624, in match
    raise NotFound() from None
werkzeug.exceptions.NotFound: 404 Not Found: The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 1463, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 872, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 755, in handle_user_exception
    return self.handle_http_exception(e)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 730, in handle_http_exception
    return self.ensure_sync(handler)(e)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/app/errors.py", line 6, in not_found_error
    render_template('404.html'), 404
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/loaders.py", line 137, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/Users/omidm./PycharmProjects/flask_microblog/app/templates/404.html", line 1, in template
    {% extens "base.html" %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'extens'.
2024-02-28 10:17:12,127 ERROR: Exception on /favicon.ico [GET] [in /Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py:828]
Traceback (most recent call last):
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 870, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 844, in dispatch_request
    self.raise_routing_exception(req)
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 453, in raise_routing_exception
    raise request.routing_exception  # type: ignore[misc]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/ctx.py", line 362, in match_request
    result = self.url_adapter.match(return_rule=True)  # type: ignore
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/werkzeug/routing/map.py", line 624, in match
    raise NotFound() from None
werkzeug.exceptions.NotFound: 404 Not Found: The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 1463, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 872, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 755, in handle_user_exception
    return self.handle_http_exception(e)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/app.py", line 730, in handle_http_exception
    return self.ensure_sync(handler)(e)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/app/errors.py", line 6, in not_found_error
    render_template('404.html'), 404
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/loaders.py", line 137, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/Users/omidm./PycharmProjects/flask_microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/Users/omidm./PycharmProjects/flask_microblog/app/templates/404.html", line 1, in template
    {% extens "base.html" %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'extens'.
2024-02-28 10:18:26,794 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:18:45,111 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:28:44,477 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:30:09,390 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:31:37,148 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
2024-02-28 10:33:10,789 INFO: Microblog startup [in /Users/omidm./PycharmProjects/flask_microblog/app/__init__.py:44]
